# Huffman-Archiver

./: .gitignore  API.cpp  API.h  CMakeLists.txt  README.md  huffmanFileProcessor.c  huffmanFileProcessor.h  main.c  main.cpp
HuffmanTree/: HuffmanTree.cpp  HuffmanTree.h
HuffmanTreeNode/: HuffmanTreeNode.h
Symbol/: Symbol.cpp  Symbol.h
SymbolInStream/: SymbolInStream.cpp  SymbolInStream.h
SymbolInStream/tests/: CMakeLists.txt  tests.cpp
SymbolStream/: SymbolStream.cpp  SymbolStream.h
SymbolStream/tests/: CMakeLists.txt  tests.cpp
src/: API.cpp  API.h  main.cpp
src/Decoder/: Decoder.cpp  Decoder.h
src/HuffmanTree/: HuffmanTree.cpp  HuffmanTree.h  HuffmanTreeNode.h  Node.cpp  Node.h
src/HuffmanTree/tests/: CMakeLists.txt  tests.cpp
src/HuffmanTreeNode/: HuffmanTreeNode.cpp
src/SymbolStream/: Symbol.cpp  Symbol.h  SymbolStream.cpp  SymbolStream.h  SymbolStreamInterface.h
src/SymbolStream/tests/: CMakeLists.txt  tests.cpp
testUtils/: genHardFile.py
